<resources>
    <string name="app_name">BiztosoProject</string>
    <string name="text_select_language">Select Language</string>
    <string name="text_select_language_desc">Choose Your Preferred Language for a Personalized Experience</string>
    <string name="text_continue">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Login</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
</resources>